# capstone_T54_gui

./: .gitignore  First Attempt With camera.py  First Attempt.py  GUIros.py  README.md  camera_handler.py  expStreamlit.py  gui_outline.py  index.html  mainStreamlitGUI.py  package.xml  ros_handler.py  setup.py
Docs/: CHANGELOG.md  README copy.md  README.md  _config.yml  final-design.html  future-work.html  index.html  resources.html  script.js  styles.css
OLD/Streamlit/: GUIros.py  mainGUI2.py  yolo_detector.py
Site/: _config.yml  index.html
Streamlit/: camera_handler.py
avend_api_client/: README.md  avend_api.py  avend_gui.py  avend_test_vend_gui.py  integration_example.py
avend_mock_server/: Avend_Server_Mock.py  README.md  mock_server.py
new_backup_gui_win/: capstone_model.py  embcam.py  main.py  main_landscape.py
vending_gui/: camera_opener.py  main_gui.py
