<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesystem="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ppe_vending_gui</name>
  <version>0.0.1</version>
  <description>PPE Vending Machine GUI</description>
  <maintainer email="your.email@example.com">Max Chen</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-streamlit</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 